# Chat_Bot_X5

./: .gitignore  Dockerfile.api  README.md  README_TECH.md  api_test.ipynb  app.py  docker-compose-old.yml  docker-compose.no-gpu.yml  docker-compose.yml  docker-compose_no_gpu.yml  outter_api.py  readme.md
Frontend/: Dockerfile  app.py
RAG/: docker-compose.yml
api/: Dockerfile.api  outter_api.py
api-service/: Dockerfile  entrypoin.sh  entrypoint.sh  pyproject.toml
api-service/src/api_service/: __init__.py  models.py  schemas.py  settings.py  views.py
api-service/src/api_service/cache/: cache_service.py  models.py  redis_client.py
api-service/src/cache/: models.py  redis_client.py
api/cache/: cache_service.py
configs/: docker-compose_ml_only.yml  docker-compose_no_gpu.yml
front/: Dockerfile  app.py  chatbot.py  demo.py  test-1.json  test.json
integration/: ui.py
ml-service/: Dockerfile  Dockerfile.ollama  Dockerfile.rag  README.md  api_test.ipynb  app.py  docker-compose-nvidia.yml  docker-compose.yml  docker-compose_no_gpu.yml  entrypoint.sh  requirements.txt
ml-service/src/ml_service/: __init__.py  app.py  schemas.py
project_docs/: ComponentDiagram.puml
rag/: Dockerfile
ui/: Dockerfile.ui  ui.py
ui+api/: Dockerfile  outter_api.py  requirements.txt  ui.py
