[tool.poetry]
name = "Chat_Bot_X5"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {from='src', include='api_service'},
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
